fixed spacing

--- a/main.css
+++ b/main.css
@@ -1,9 +1,10 @@
 body {
     background: #EEEEEE;
-    width: 100%
+    width: 100%;
+    padding: 15% 5%;
 }
 
 .card {
 
-    margin: 5%;
+    margin: 5% 15%;
 }
